Actualizo documentación, aumento implementación de seguridad con tokens y basEncript para el password con spring security
