# src/main/java/com/api/rober/Controllers/DTO/User/DTOJWTToken.java
@@ -1,0 +1,4 @@
+package com.api.rober.Controllers.DTO.User;
+
+public record DTOJWTToken(String jwTtoken) {
+}
